--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
 <link rel="icon" type="image/x-icon" href="favicon.ico">
 <title>Flix Launcher - Official Website</title>
 
+<meta content="Flix Launcher - An upcoming simple Android launcher" property="og:title" />
+<meta content="Flix Launcher is a mix of simplicity and minimalism" property="og:description" />
+<meta content="https://bluplethe0ne.github.io/FlixLauncher/" property="og:url" />
+<meta content="https://cdn.discordapp.com/attachments/894992097965387778/1193227589096054906/AppIcon.png?ex=65abf2ca&is=65997dca&hm=b102765c42a11448e755dc91d2912cc5781adfaf6e0627ae9b19988e3ffaa03f&" property="og:image" />
+<meta content="#0335ff" data-react-helmet="true" name="theme-color" />
+
 <html>
 <head>
 <body>
