--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <h1>Flix Launcher is comming <font color="#00ff99" face="Poppins">soon</font></h1>
 
 
-<h2>While you're waiting, join the <font id="test" color="#134fe8" face="Poppins">Discord</font></h2>
+<h2>While you're waiting, join the <font id="test" color="#134fe8" face="Poppins" onclick="location.href='https://discord.gg/My8HSNC2Yu'">Discord</font></h2>
 
 <br>
 <br>
