--- a/about.html
+++ b/about.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 
 
-<link rel="stylesheet" href=".\style\about.css">
+<link rel="stylesheet" href="about.css">
 <meta name="viewport" content="width=device-width, initial-scale=0.5">   
-<link rel="icon" type="image/x-icon" href=".\images\favicon.ico">
+<link rel="icon" type="image/x-icon" href="favicon.ico">
 <title>Flix Launcher - Download</title>
 
 <html>
@@ -13,7 +13,7 @@
 
         <h3 id="toolbar-home" onclick="location.href='index.html'">Home</h3>
         
-        <a id="toolbar-download" href="https://cdn.discordapp.com/attachments/894992097965387778/1193230173571645580/FlixLauncher_release.apk?ex=65abf532&is=65998032&hm=4458c4309ac2142a6de7e49ca1b20f68710779e2ab8b431fde546e642f1ed258&" download="app.apk">Download</a>
+        <a id="toolbar-download" href="FluxLauncher_release.apk" download="FlixLauncher_release.apk">Download</a>
         
         <h3 id="toolbar-about">About</h3>
         </div>
@@ -22,7 +22,7 @@
    <br>
 
    <h1>About me</h1>
-    <img id="pfp" src=".\images\pfp.jpg"></img>
+    <img id="pfp" src="pfp.jpg"></img>
 
 <br>
 <br>
