--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 
-<link rel="stylesheet" href=".\style\index-style.css">
+<link rel="stylesheet" href="index-style.css">
 <meta name="viewport" content="width=device-width, initial-scale=0.5">   
 <link rel="icon" type="image/x-icon" href=".\images\favicon.ico">
 <title>Flix Launcher - Official Website</title>
@@ -13,7 +13,7 @@
 
 <h3 id="toolbar-home">Home</h3>
 
-<a id="toolbar-download" href=".\builds\FlixLauncher_release.apk" download="FlixLauncher_release.apk">Download</a>
+<a id="toolbar-download" href="FlixLauncher_release.apk" download="FlixLauncher_release.apk">Download</a>
 
 <h3 id="toolbar-about" onclick="location.href='about.html'">About</h3>
 </div>
@@ -24,7 +24,7 @@
 
 <center>
 <div id ="txtandss1">
-    <img id="hss" src=".\images\Homescreen.jpg"></img>
+    <img id="hss" src="Homescreen.jpg"></img>
      </div>
 <h2><br>Flix launcher has a simple<br> and optimized style that allows any phone<br> to get a small ressources boost and a simple user experience.</h2>    
 <body>
@@ -32,7 +32,7 @@
 <br>
 
 <div id ="txtandss1">
-    <img id="appslist_screenshot" src=".\images\applist_screenshot.jpg"></img>
+    <img id="appslist_screenshot" src="applist_screenshot.jpg"></img>
      </div>
 
 <h2><br>Flix Launcher has an <font color="#8000ff" face="Poppins">unique</font><br> and <font color="#00ff99" face="Poppins">simple</font> applications list</h2>
