--- a/preview.html
+++ b/preview.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 
 
-<link rel="stylesheet" href=".\style\preview_style.css">
+<link rel="stylesheet" href="preview_style.css">
 <meta name="viewport" content="width=device-width, initial-scale=0.5">   
-<link rel="icon" type="image/x-icon" href=".\images\favicon.ico">
+<link rel="icon" type="image/x-icon" href="favicon.ico">
 <title>Flix Launcher - Online Preview</title>
 
 <html>
@@ -23,19 +23,19 @@
             <h1>16:30</h1>
           
             <div id="google_searchbar" onclick="location.href='https://google.com/'">
-                <img id="ggl_ic" src=".\images\googlelogo.png"></img>
+                <img id="ggl_ic" src="googlelogo.png"></img>
                 <h3 id="searchtxt">Search on google</h3>
             </div>
             <div id="appslist">
                 <div id="topcntrler">
                     <br>
                     <br>
-                    <img id="yt_ic" src=".\images\yt_ic.png"></img>
-                    <img id="sp_ic" src=".\images\spotify_ic.png"></img>
+                    <img id="yt_ic" src="yt_ic.png"></img>
+                    <img id="sp_ic" src="spotify_ic.png"></img>
                 </div>
             </div>
 
-            <script src=".\js\preview.js"></script>
+            <script src="preview.js"></script>
 
             <script>
                 function openAppsList() {
@@ -73,11 +73,11 @@
             <br>
 
             <div id="btmapps">
-                <img id="settings_btn" src=".\images\settings_ic.png" onclick="errorToast()"></img>
-                <img id="plstore_btn" onclick="location.href='https://play.google.com/'" src=".\images\plstore_ic.png"></img>
-                <img id="appsdrwlist_btn" onclick="openAppsList()" src=".\images\ic_expand_less_white.png"></img>
-                <img id="phone_btn" src=".\images\phone_ic.png" onclick="errorToast()"></img>
-                <img id="gmail_btn" onclick="location.href='https://mail.google.com'" src=".\images\gmail_ic.png"></img>
+                <img id="settings_btn" src="settings_ic.png" onclick="errorToast()"></img>
+                <img id="plstore_btn" onclick="location.href='https://play.google.com/'" src="plstore_ic.png"></img>
+                <img id="appsdrwlist_btn" onclick="openAppsList()" src="ic_expand_less_white.png"></img>
+                <img id="phone_btn" src="phone_ic.png" onclick="errorToast()"></img>
+                <img id="gmail_btn" onclick="location.href='https://mail.google.com'" src="gmail_ic.png"></img>
             </div>
         </div>
 
