--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <link rel="stylesheet" href="index-style.css">
 <meta name="viewport" content="width=device-width, initial-scale=0.5">   
-<link rel="icon" type="image/x-icon" href=".\images\favicon.ico">
+<link rel="icon" type="image/x-icon" href="favicon.ico">
 <title>Flix Launcher - Official Website</title>
 
 <html>
