--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
 <link rel="icon" type="image/x-icon" href="favicon.ico">
 <title>Flix Launcher - Official Website</title>
 
+
+<meta content="Flix Launcher - A simple Android launcher." property="og:title" />
+<meta content="Flix Launcher is a mix of simplicity and minimalism all inside an android home screen launcher." property="og:description" />
+<meta content="https://bluplethe0ne.github.io/FlixLauncher/" property="og:url" />
+<meta content="AppIcon.png" property="og:image" />
+<meta content="#0335ff" data-react-helmet="true" name="theme-color" />
+
+
+
 <html>
 <head>
 
