--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <meta content="Flix Launcher - A simple Android launcher." property="og:title" />
 <meta content="Flix Launcher is a mix of simplicity and minimalism all inside an android home screen launcher." property="og:description" />
 <meta content="https://bluplethe0ne.github.io/FlixLauncher/" property="og:url" />
-<meta content="https://bluplethe0ne.github.io/FlixLauncher/AppIcon.png" property="og:image" />
+<meta content="https://cdn.discordapp.com/attachments/894992097965387778/1195771451010207865/CC_20240112_225217.png?ex=65b533f2&is=65a2bef2&hm=1a6c1da7cdf547670756666f45fc91637f3279dd69f5a4bed0f825624917f807&" property="og:image" />
 <meta content="#0335ff" data-react-helmet="true" name="theme-color" />
 
 
